Fixed spacing issue on group list page.

--- a/frontend/src/components/GroupsList/GroupsList.css
+++ b/frontend/src/components/GroupsList/GroupsList.css
@@ -79,7 +79,6 @@
   color: rgb(117 117 117);
   display: flex;
   font-size: 14px;
-  height: 20px;
   margin-bottom: 16px;
   margin-top: 0;
 }
